--- a/stylesheets/header.css
+++ b/stylesheets/header.css
@@ -45,7 +45,8 @@
     top: 55px;
     left: 100px;
     width: 1100px;
-    height: 430px;
+    min-height: 100px;
+    /* padding-bottom: 10px; */
     line-height: 20px;
     opacity: 0;
     padding-top: 20px;
@@ -84,17 +85,49 @@
     padding-left: 20px;
     margin-left: -15px;
     margin-right: -13px;
+    /* border: 1px solid black; */
 }
 
 .inner-floating-div-2 {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: start;
     background-color: rgb(226, 226, 226);
     padding-left: 20px;
     margin-left: -15px;
     margin-right: -13px;
+    height: 100%;
+    padding-bottom: 30px;
+    /* border: 1px solid black; */
+}
+
+#ifdm1 {
+   padding-bottom: 40px;
+}
+
+#ifdw1 {
+    padding-bottom: 31;
+}
+
+#ifdw2 {
+    padding-bottom: 65px;
+}
+
+#ifdk2 {
+    padding-bottom: 110px;
+}
+
+#ifdhl2 {
+    padding-bottom: 40px;
+}
+
+#ifdb1 {
+    padding-bottom: 43px;
+}
+
+#ifdb2 {
+    padding-bottom: 31px;
 }
 
 .inner-floating-div-1 h4, .inner-floating-div-2 h4 {
